--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,27 @@
     <color name="grey_700">#818181</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="primary_dark">@color/purple_700</color>
+    <color name="primary">@color/purple_500</color>
+    <color name="primary_light">@color/purple_200</color>
+
+    <color name="secondary_dark">#CDCDCD</color>
+    <color name="secondary">@color/grey_700</color>
+    <color name="secondary_light">#FFFFFF</color>
+    <color name="secondary_light_60">#99FFFFFF</color>
+
+    <color name="background">#232730</color>
+    <color name="background_dark">#1B1D29</color>
+    <color name="paper">#2E353F</color>
+
+    <color name="error">#e84545</color>
+    <color name="error_dark">#d32f2f</color>
+
+    <color name="warning_dark">#F48B29</color>
+    <color name="warning">#F0A500</color>
+
+    <color name="divider">#A68B979D</color>
+    <color name="outline">#39424E</color>
 </resources>
